--- a/PasswordManagerAngular/src/app/createuser/createuser.component.html
+++ b/PasswordManagerAngular/src/app/createuser/createuser.component.html
@@ -1,5 +1,5 @@
-<div class="row no-gutters mt-md-5">
-    <div class="card-container-background mt-md-5 col-12">
+<div class="row no-gutters mt-5">
+    <div class="card-container-background mt-md-5 col-lg-8 offset-lg-2 col-12">
         <div class="row no-gutters">
             <!-- Text container -->
             <div class="col-4 card-left-container d-none d-lg-block">
