--- a/PasswordManagerAngular/src/app/home/home.component.html
+++ b/PasswordManagerAngular/src/app/home/home.component.html
@@ -5,6 +5,7 @@
 </div>
 <div class="row body-container">
     <app-new-sitekey (addedNewSitekey)="newSiteKeyCreated($event)" class="new-sitekey-container"></app-new-sitekey>
+    <app-password-generator class="password-generator-container"></app-password-generator>
 
     <div class="col-12 all-sitekeys-container">
 
@@ -34,18 +35,26 @@
         <div *ngIf="usersSiteKeys" class="col-12">
             <div *ngFor="let sitekey of usersSiteKeys" class="single-sitekey-container row">
                 <div class="sitekey-site-con col-3 row no-gutters">
-                    <div class="col-2">
+                    <div class="col-2 d-xl-block d-none">
                         <div class="site-icon">
                             <span>{{sitekey.sitename.substring(0,4)}}</span>
                         </div>
                     </div>
                     <div class="col-10">
-                        <span class="w-100 d-block">{{sitekey.sitename}}</span>
-                        <span class="w-100 d-block text-muted">{{sitekey.loginName}}</span>
+                        <div class="sitekey-con sitekey-username-con row" (click)="copyText(sitekey.loginName, 'Brugernavn')">
+                            <div class="col-1"><i class="fas fa-copy mt-3"></i></div>
+                            <div class="col-11">
+                                <span class="d-block">{{sitekey.sitename}}</span>
+                                <span class="d-block text-muted">{{sitekey.loginName}}</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="sitekey-password-con col-4">
-                    <span class="w-100 d-block">{{sitekey.loginPassword}}</span>
+                <div class="col-4 pt-3">
+                    <div class="sitekey-con sitekey-password-con" (click)="copyText(sitekey.loginPassword, 'Password')">
+                        <i class="fas fa-copy"></i>
+                        <span class="pl-3">{{sitekey.loginPassword}}</span>
+                    </div>
                 </div>
                 <!-- <div class="sitekey-action-con col-2 text-center">
                     <span>Handling</span>
@@ -58,5 +67,11 @@
 
 
 
+    </div>
+</div>
+
+<div class="alert-container" [ngClass]="alertShow ? 'd-block' : 'd-none'">
+    <div class="alert alert-secondary" role="alert">
+        {{alertText}}
     </div>
 </div>
