--- a/PasswordManagerAngular/src/app/password-generator/password-generator.component.html
+++ b/PasswordManagerAngular/src/app/password-generator/password-generator.component.html
@@ -7,18 +7,18 @@
 <div *ngIf="formShown" class="row addnew-form-background">
     <div class="col-12 addnew-form-container">
 
-        <div class="input-group mb-2">
-            <input type="text" class="form-control">
+        <div class="input-group mb-2" (click)="copyText(generatedPasswordValue.generatedPassword, 'Password')">
+            <input type="text" class="form-control" id="generatedPasswordInput" [value]="generatedPasswordValue.generatedPassword">
             <div class="input-group-append">
                 <button class="btn" type="button"><i class="fas fa-copy"></i></button>
             </div>
         </div>
 
-        <!-- Login button -->
+        <!-- New password button -->
         <div class="row justify-content-center">
 
             <div class="button-container col-12 col-md-3">
-                <button [disabled]="loading" class="btn btn-block btn-primary">
+                <button [disabled]="loading" class="btn btn-block btn-primary" (click)="generateNewPassword()">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     <i class="fas fa-sync"></i>
                 </button>
@@ -44,20 +44,20 @@
 
             <div  *ngIf="showCustomSettings" class="col-12 mt-3">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
+                    <input class="form-check-input" type="checkbox" value="" id="customSettingsLetters" (change)="changeNewPasswordSettings('letters')">
+                    <label class="form-check-label" for="customSettingsLetters">
                         Medtag bogstaver (a-z A-Z)
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
+                    <input class="form-check-input" type="checkbox" value="" id="customSettingsNumbers" (change)="changeNewPasswordSettings('numbers')">
+                    <label class="form-check-label" for="customSettingsNumbers">
                         Medtag tal (0-9)
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
+                    <input class="form-check-input" type="checkbox" value="" id="customSettingsSigns" (change)="changeNewPasswordSettings('signs')">
+                    <label class="form-check-label" for="customSettingsSigns">
                         Medtag tegn
                     </label>
                 </div>
