--- a/PasswordManagerAngular/src/app/password-generator/password-generator.component.less
+++ b/PasswordManagerAngular/src/app/password-generator/password-generator.component.less
@@ -27,7 +27,7 @@
     position: absolute;
     right: 20px;
     min-height: 50px;
-    width: 500px;
+    width: 600px;
     padding-top: 20px;
     .addnew-form-container {
         width: 100%;
@@ -47,6 +47,10 @@
     i{
         color: #ffffff;
     }
+}
+
+#generatedPasswordInput {
+
 }
 
 .passwordsettings-container {
