--- a/PasswordManagerAngular/src/app/home/home.component.html
+++ b/PasswordManagerAngular/src/app/home/home.component.html
@@ -53,7 +53,7 @@
                 <div class="col-4 pt-3">
                     <div class="sitekey-con sitekey-password-con" (click)="copyText(sitekey.loginPassword, 'Password')">
                         <i class="fas fa-copy"></i>
-                        <span class="pl-3">{{sitekey.loginPassword}}</span>
+                        <span class="pl-3 sitekey-password-text">{{sitekey.loginPassword}}</span>
                     </div>
                 </div>
                 <!-- <div class="sitekey-action-con col-2 text-center">
